--- a/osushop/templates/good_detail_page.html
+++ b/osushop/templates/good_detail_page.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>good_tetal_page</title>
+    <title>good_detail_page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static "css/user_center_last.css" %}"/>
@@ -44,7 +44,7 @@
     <div class="issue_big_bg layui-form layui-form-pane div_in_juzhong">
         <div class="tiaozheng">
             <div class="shang_10 div_in_chuizhi">
-                <p>发布于：{{ goods_detail.create_time }}</p>
+                <p>Posted on：{{ goods_detail.create_time }}</p>
             </div>
             <div class="zuo_40">
                 <img src="/media/img/{{ MEDIA_URL }}{{ goods_detail.img }}">
@@ -103,41 +103,6 @@
     </div>
 </div>
 
-{#<div class="div_weibu" style="margin-top: 0px">#}
-{#    <div class="div_weibu_56">#}
-{#        <div class="div_weibu_56_70">#}
-{#            <div class="div_weibu_56_70_1">#}
-{#                <div class="tiaoweizhi">#}
-{#                    <div class="div_51_51_1"></div>#}
-{#                    <div class="div_130_51"><h4 class="h4_1"><font color="white">30天无忧退换货</font></h4></div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="div_weibu_56_70_2">#}
-{#                <div class="tiaoweizhi">#}
-{#                    <div class="div_51_51_2"></div>#}
-{#                    <div class="div_130_51"><h4 class="h4_1"><font color="white">30天无忧退换货</font></h4></div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="div_weibu_56_70_3">#}
-{#                <div class="tiaoweizhi">#}
-{#                    <div class="div_51_51_3"></div>#}
-{#                    <div class="div_130_51"><h4 class="h4_1"><font color="white">30天无忧退换货</font></h4></div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#    <div class="div_weibu_44">#}
-{#        <div class="div_weibu_zhong">#}
-{#            <font color="#999"> 关于我们&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp帮助中心&nbsp&nbsp&nbsp#}
-{#                |&nbsp&nbsp&nbsp售后服务&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp配送与验收&nbsp&nbsp&nbsp|#}
-{#                &nbsp&nbsp&nbsp商务合作&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp企业采购&nbsp&nbsp&nbsp#}
-{#                |&nbsp&nbsp&nbsp开放平台&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp搜索推荐&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp#}
-{#                友情链接</font>#}
-{#        </div>#}
-{#        <div class="div_weibu_zhong2">#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
 <script type="text/javascript" src="{% static "js/jquery/jquery-3.3.1.min.js" %}"></script>
 <script type="text/javascript" src="{% static "css/layui/layui.all.js" %}"></script>
 <script type="text/javascript">
