--- a/osushop/templates/index.html
+++ b/osushop/templates/index.html
@@ -24,7 +24,7 @@
         <div class="head_brand">
             {#头部中间商标#}
             <div>
-                <a class="head_brand_middle" href="#">
+                <a class="head_brand_middle" href="index">
                 </a>
             </div>
         </div>
@@ -109,11 +109,11 @@
     </div>
     <div class="sort_bg">
 
-        <a class="sort" href="search2?sort_id=8">Others</a>
+        <a class="sort" href="search2?sort_id=8">Clothes</a>
     </div>
         <div class="sort_bg">
 
-        <a class="sort" href="search2?sort_id=8">Others</a>
+        <a class="sort" href="search2?sort_id=0">Others</a>
     </div>
 </div>
 
