--- a/osushop/templates/user_center.html
+++ b/osushop/templates/user_center.html
@@ -55,7 +55,7 @@
             <div class="head_brand">
                 {#头部中间商标#}
                 <div>
-                    <a class="head_brand_middle" href="#">
+                    <a class="head_brand_middle" href="index">
                     </a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 {#头部用户#} <a id="home_user" href="register">Register</a>
                 {#头部退出#} <a id="home_quit" href="login">Log in</a>
             {% else %}
-                {#头部用户#} <a id="home_user" href="#">{{ nick_name }}</a>
+                {#头部用户#} <a id="home_user" href="user_center">{{ nick_name }}</a>
                 {#头部退出#} <a id="home_quit" href="logout">Log out</a>
             {% endif %}
         </div>
@@ -89,7 +89,7 @@
         </div>
 {#     内容#}
         <div class="layui-tab-content">
-{#             show 1#}
+{#             show 1 个人信息修改#}
             <div class="layui-tab-item layui-show">
                <div class="big_bg">
                    <form class="layui-form" id="user_form" enctype="multipart/form-data">
@@ -154,30 +154,30 @@
                     {% for foo in cart_list %}
                         <div class="show_1_1">
                             <div class="tou_20 div_in_chuizhi">
-                                <a>{{ foo.goods.create_time }}</a>
+                                <a>{{ foo.creat_time}}</a>
                             </div>
 
                             <div class="last_zuo div_in_juzhong">
-                                <div class="last_zuo_bg">
-                                    <img src="{{ MEDIA_URL }}{{ foo.goods.img }}">
+                                <div >
+                                    <img height="100" width="100" src="/media/img/{{ MEDIA_URL }}{{ foo.img }}">
                                 </div>
                             </div>
 
                             <div class="last_middle">
                                 <div class="last_middle_1">
-                                    <h2>{{ foo.goods.name }}</h2>
+                                    <h2>{{ foo.name }}</h2>
                                 </div>
 
                                 <div class="last_middle_2">
-                                    <h2 style="float: left">￥</h2>
-                                    <div class="jiage">{{ foo.goods.price }}</div>
+                                    <h2 style="float: left">$</h2>
+                                    <div class="jiage">{{ foo.price }}</div>
                                 </div>
                             </div>
 
                             <div class="last_you div_in_juzhong">
-                                <button class="del_buttun2" onclick="buy_good({{ foo.goods.id }})" style="cursor:pointer">立刻购买
+                                <button class="del_buttun2" onclick="buy_good({{ foo.id }})" style="cursor:pointer">立刻购买
                                 </button>
-                                <button class="del_buttun" onclick="del_cart({{ foo.goods.id }})" style="cursor:pointer">删除
+                                <button class="del_buttun" onclick="del_cart({{ foo.id }})" style="cursor:pointer">删除
                                 </button>
                             </div>
                         </div>
